# gemstone-designer

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: gem.frag  iterator.rs  main.rs  triangle.rs
src/triangle/: spectrum.rs
